Add JavaDoc to code